--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,21 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'depCheck'
+}
+
+depConfig {
+    path = rootDir.absolutePath + File.separator + "api.json"
 }
 
 android {
     namespace 'com.codelang.privacycheck'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.codelang.privacycheck"
         minSdk 23
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -41,4 +46,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    implementation project(":test")
 }
