--- a/build.gradle
+++ b/build.gradle
@@ -4,4 +4,5 @@ plugins {
     id 'com.android.library' version '8.0.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
     id 'org.jetbrains.kotlin.jvm' version '1.8.20' apply false
+    id 'depCheck' apply false
 }
