--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,17 @@
+buildscript {
+    repositories {
+        maven { url "https://raw.githubusercontent.com/MRwangqi/Maven/main" }
+    }
+    dependencies {
+        classpath "com.github.MRwangqi:uploadPlugin:1.0.0"
+        classpath "com.github.MRwangqi:depCheckPlugin:1.0.0"
+    }
+}
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '8.0.1' apply false
     id 'com.android.library' version '8.0.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
     id 'org.jetbrains.kotlin.jvm' version '1.8.20' apply false
-    id 'depCheck' apply false
+//    id 'depCheck' apply false
 }
