--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation project(":test")
-    implementation project(":RuntimeCheck")
-
+//    implementation project(":RuntimeCheck")
+    implementation "com.github.MRwangqi:runtimecheck:1.0.0"
 }
