--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     }
     dependencies {
         classpath "com.github.MRwangqi:uploadPlugin:1.0.0"
-//        classpath "com.github.MRwangqi:depCheckPlugin:1.0.0"
+        classpath "com.github.MRwangqi:depCheckPlugin:1.0.0"
     }
 }
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
@@ -13,5 +13,5 @@ plugins {
     id 'com.android.library' version '8.0.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
     id 'org.jetbrains.kotlin.jvm' version '1.8.20' apply false
-    id 'depCheck' apply false
+//    id 'depCheck' apply false
 }
