--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,8 +49,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation project(":test")
-//    implementation project(":RuntimeCheck")
-    implementation "com.github.MRwangqi:runtimecheck:1.0.0"
+    implementation project(":RuntimeCheck")
+    implementation project(":FridaCheck")
+//    implementation "com.github.MRwangqi:runtimecheck:1.0.0"
 
     implementation("com.github.MRwangqi:lint:1.0.1")
+
 }
